@@ -16,6 +16,7 @@ TMW.CHANGELOG = {
 [==[* Fixed an error with power bar spell cost detection for German clients.]==],
 [==[* Removed the Monochrome font outline option because it causes crashes so often.]==],
 [==[* Resource Display icons should now correctly display partial resources.]==],
+[==[* Fixed some errors that happen when using meta icons as group controllers.]==],
 [==[]==],
 [==[===v7.2.2===]==],
 [==[* You can now easily clone an event handler by right-clicking it in the Notifications tab.]==],
